--- a/net-analyzer/barnyard2/ChangeLog
+++ b/net-analyzer/barnyard2/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-analyzer/barnyard2
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/barnyard2/ChangeLog,v 1.5 2011/04/02 12:54:23 ssuominen Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header $
+
+  23 May 2012; <larry@gentoo.org> -barnyard2-1.8.ebuild, -barnyard2-1.9.ebuild,
+  +barnyard2-1.9-r1.ebuild:
+  Point to barnyard2 code's new home at GitHub
 
   02 Apr 2011; Samuli Suominen <ssuominen@gentoo.org> barnyard2-1.8.ebuild,
   barnyard2-1.9.ebuild:
