--- a/gnome-base/librsvg/ChangeLog
+++ b/gnome-base/librsvg/ChangeLog
@@ -2,6 +2,10 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/gnome-base/librsvg/ChangeLog,v 1.278 2012/05/09 01:21:56 aballier Exp $
 
+  25 May 2012; <larry@gentoo.org> +librsvg-2.36.1.ebuild,
+  +librsvg-2.36.1-r1.ebuild:
+  Trying the newest(?) version 
+
   24 May 2012; <larry@gentoo.org> -librsvg-2.34.1-r1.ebuild,
   +librsvg-2.34.2-r1.ebuild, -librsvg-2.36.0.ebuild, -librsvg-2.36.1.ebuild:
   Bumping librsvg-2.34.2 for local changes
