--- a/mail-client/mutt/ChangeLog
+++ b/mail-client/mutt/ChangeLog
@@ -1,11 +1,71 @@
 # ChangeLog for mail-client/mutt
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/mail-client/mutt/ChangeLog,v 1.227 2012/04/28 15:05:01 grobian Exp $
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/mail-client/mutt/ChangeLog,v 1.245 2013/05/02 07:47:35 grobian Exp $
 
-*mutt-1.5.21-r10 (21 May 2012)
+  02 May 2013; Fabian Groffen <grobian@gentoo.org> mutt-1.5.21-r12.ebuild:
+  Fix for automake-1.13
 
-  21 May 2012; <larry@L2G.to> +mutt-1.5.21-r10.ebuild:
-  Use my virtual/www-termclient dependency instead
+  22 Apr 2013; Agostino Sarubbo <ago@gentoo.org> mutt-1.5.21-r12.ebuild:
+  Stable for sparc, wrt bug #465390
+
+  18 Apr 2013; Agostino Sarubbo <ago@gentoo.org> mutt-1.5.21-r12.ebuild:
+  Stable for ia64, wrt bug #465390
+
+  18 Apr 2013; Agostino Sarubbo <ago@gentoo.org> mutt-1.5.21-r12.ebuild:
+  Stable for alpha, wrt bug #465390
+
+  17 Apr 2013; Jeroen Roovers <jer@gentoo.org> mutt-1.5.21-r12.ebuild:
+  Stable for HPPA (bug #465390).
+
+  14 Apr 2013; Agostino Sarubbo <ago@gentoo.org> mutt-1.5.21-r12.ebuild:
+  Stable for ppc64, wrt bug #465390
+
+  14 Apr 2013; Agostino Sarubbo <ago@gentoo.org> mutt-1.5.21-r12.ebuild:
+  Stable for ppc, wrt bug #465390
+
+  14 Apr 2013; Agostino Sarubbo <ago@gentoo.org> mutt-1.5.21-r12.ebuild:
+  Stable for x86, wrt bug #465390
+
+  14 Apr 2013; Agostino Sarubbo <ago@gentoo.org> mutt-1.5.21-r12.ebuild:
+  Stable for amd64, wrt bug #465390
+
+  21 Jan 2013; Steev Klimaszewski <steev@gentoo.org> mutt-1.5.21-r12.ebuild:
+  Add ~arm keyword
+
+  19 Dec 2012; Fabian Groffen <grobian@gentoo.org> mutt-1.5.21-r12.ebuild:
+  Drop duplicate patch, which caused no problems, but obviously isn't necessary
+
+*mutt-1.5.21-r12 (07 Dec 2012)
+
+  07 Dec 2012; Fabian Groffen <grobian@gentoo.org> +mutt-1.5.21-r12.ebuild,
+  -mutt-1.5.21-r9.ebuild:
+  Revbump, adding several fixes from upstream
+
+*mutt-1.5.21-r11 (25 Aug 2012)
+
+  25 Aug 2012; Fabian Groffen <grobian@gentoo.org> +mutt-1.5.21-r11.ebuild,
+  -mutt-1.5.21-r10.ebuild:
+  Drop faulty -r10, add fixes for crash (bug #432344) and hang (bug #432562) in
+  -r11.
+
+  22 Aug 2012; Johannes Huber <johu@gentoo.org> mutt-1.5.21-r10.ebuild:
+  Stable for x86, wrt bug #432050
+
+  21 Aug 2012; Fabian Groffen <grobian@gentoo.org> mutt-1.5.21-r10.ebuild:
+  Use emake in src_install
+
+  21 Aug 2012; Agostino Sarubbo <ago@gentoo.org> mutt-1.5.21-r10.ebuild:
+  Stable for amd64, wrt bug #432050
+
+  22 Jun 2012; Fabian Groffen <grobian@gentoo.org> mutt-1.5.21-r10.ebuild:
+  Drop Solaris ncurses pach, it no longer fixes, but rather seems to introduce
+  arcs being drawn badly
+
+*mutt-1.5.21-r10 (14 Jun 2012)
+
+  14 Jun 2012; Fabian Groffen <grobian@gentoo.org> +mutt-1.5.21-r10.ebuild,
+  -mutt-1.5.21-r8.ebuild:
+  Revbump for automake-1.12 fix, bug #420955.
 
 *mutt-1.5.21-r9 (28 Apr 2012)
 
